; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ethernet/sfc/falcon/extr_efx.c_ef4_fini_napi_channel.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ethernet/sfc/falcon/extr_efx.c_ef4_fini_napi_channel.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ef4_channel = type { i32*, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.ef4_channel*)* @ef4_fini_napi_channel to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ef4_fini_napi_channel(%struct.ef4_channel* %0) #0 {
  %2 = alloca %struct.ef4_channel*, align 8
  store %struct.ef4_channel* %0, %struct.ef4_channel** %2, align 8
  %3 = load %struct.ef4_channel*, %struct.ef4_channel** %2, align 8
  %4 = getelementptr inbounds %struct.ef4_channel, %struct.ef4_channel* %3, i32 0, i32 0
  %5 = load i32*, i32** %4, align 8
  %6 = icmp ne i32* %5, null
  br i1 %6, label %7, label %11

7:                                                ; preds = %1
  %8 = load %struct.ef4_channel*, %struct.ef4_channel** %2, align 8
  %9 = getelementptr inbounds %struct.ef4_channel, %struct.ef4_channel* %8, i32 0, i32 1
  %10 = call i32 @netif_napi_del(i32* %9)
  br label %11

11:                                               ; preds = %7, %1
  %12 = load %struct.ef4_channel*, %struct.ef4_channel** %2, align 8
  %13 = getelementptr inbounds %struct.ef4_channel, %struct.ef4_channel* %12, i32 0, i32 0
  store i32* null, i32** %13, align 8
  ret void
}

declare dso_local i32 @netif_napi_del(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
